<resources>
    <string name="app_name">Guess The Character</string>
    <string name="get_ready_to">Get ready to</string>
    <string name="play">Play</string>
    <string name="who_am_i">Who am I?</string>
    <string name="score">Current Score:  %d</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="end_game">End game</string>
    <string name="you_scored">You Scored</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Incorrect Answer. Try again</string>
    <string name="correct_answer">Correct Answer!</string>
    <string name="hint">Hint: %s</string>
    <string name="game_finished">Game has just finished</string>
</resources>
